--- a/style.css
+++ b/style.css
@@ -189,17 +189,17 @@ nav .logo{
 .about .foto{
     float: left;
     max-width: 770px;
-    padding-left: 30px;
-    margin: 30px auto;
+    padding-left: 1em;
+    margin: 1em auto;
     position: relative;
 
 }
 
 .about .info{
     float: right;
-    padding: 2em;
+    padding: 1em;
     width: 40%;
-    margin: 2em;
+    margin: 1em;
     background-color: rgb(240, 220, 247);
     text-align: justify;
     box-shadow: 0 20px 50px rgba(0, 0, 0, .5);
@@ -252,14 +252,14 @@ nav .logo{
 }
 
 .experience .des2{
-    padding: 10px;
+    padding: 1em;
     width: 40%;
-    margin: 40px;
+    margin: 1em;
     background-color: rgb(240, 220, 247);
     text-align: justify;
     box-shadow: 0 20px 50px rgba(0, 0, 0, .5);
     float: left;
-    margin-left: 100px;
+    margin-left: 1em;
     
 }
 
@@ -312,7 +312,7 @@ nav .logo{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 20px 100px;
+	padding: .5em .5em;
 }
 
 .cont:after{
@@ -436,16 +436,9 @@ nav .logo{
         display: flex;
     }
 
-    .about .info{
-        float: right;
-        padding: 10px;
-        width: 40%;
-        margin: 40px;
-        background-color: rgb(240, 220, 247);
-        text-align: justify;
-        box-shadow: 0 20px 50px rgba(0, 0, 0, .5);
-    }
-
-
 }
+
+@media (min-width: 1024px) {
+    
+  }
 
